--- a/src/main/angular/ranking/angular.json
+++ b/src/main/angular/ranking/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ranking",
+            "outputPath": "../../resources/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
