--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>lu.cnw</groupId>
     <artifactId>ranking</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.6</version>
     <name>ranking</name>
     <description>Swimranking crawler</description>
     <properties>
